--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,8 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1,
@@ -31,4 +33,10 @@ a {
 
 img {
   width: 100%;
+}
+
+address{
+font-style: normal;
+text-decoration: none;
+
 }
