--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,334 @@
-/* место для вашего кода */
+header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 92px 24px 106px;
+  background-color: #f5f5f5;
+}
+
+.header__menu {
+}
+
+.header__links-list {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  padding-left: 27px;
+  list-style-type: circle;
+}
+.header__links-list-item {
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 1%;
+  text-underline-offset: 3px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+  line-height: 24.3px;
+}
+.address a {
+  text-underline-offset: 3px;
+}
+
+.header__address {
+  justify-self: end;
+  padding-right: 62px;
+}
+
+.cover {
+  position: relative;
+  max-height: 757px;
+  margin-bottom: 169px;
+  padding: 165px 50px 51px 50px;
+  font-family: Raleway;
+  background-image: url(/images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  opacity: 60%;
+  background-color: black;
+}
+
+.cover__title {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 135px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  z-index: 2;
+  display: block;
+  color: #fff;
+  font-weight: 700;
+  font-size: 100px;
+  letter-spacing: 31px;
+}
+
+.aligned-text-left {
+  line-height: 115%;
+  text-align: left;
+}
+
+.aligned-text_center {
+  line-height: 100%;
+  letter-spacing: 31px;
+  text-align: center;
+}
+
+.aligned-text_right {
+  line-height: 100%;
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cover__description-text {
+  z-index: 2;
+  padding-left: 27px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 45px;
+  text-transform: uppercase;
+  word-spacing: 19px;
+}
+
+.bet-button {
+  z-index: 2;
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.lots {
+  margin-bottom: 146px;
+  padding: 0 24px;
+  
+}
+
+.lots__heading {
+  margin-bottom: 27px;
+  padding-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-bottom: 30px;
+ 
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  
+  
+}
+
+.card-link {
+  display: block;
+  text-decoration: none;
+  
+  height: 100%;
+}
+
+.card {
+  position: relative;
+ 
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 334px;
+  justify-content: space-between;
+  
+  
+  padding: 51px 40px 48px;
+  color: #fff;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+  background-size: cover;
+}
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+  background-size: cover;
+}
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+  background-size: cover;
+}
+.card__title {
+  z-index: 2;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  z-index: 2;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.lots__look-more-link {
+  padding-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  text-underline-position: under;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto auto;
+
+  margin-right: 24px;
+  margin-bottom: 180px;
+  margin-left: 24px;
+}
+
+.about__column {
+  display: grid;
+  gap: 24px;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.about__logo {
+  display: block;
+  justify-self: center;
+  align-self: center;
+  justify-self: center;
+  width: 240px;
+  height: 240px;
+
+  border-radius: 50%;
+  padding: 64px 46px 62px;
+  background-color: black;
+  margin-top: 35px;
+  margin-left: -13px;
+}
+
+.about__logo-image {
+}
+
+.about__title {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  align-self: center;
+  align-self: center;
+  margin-top: 45px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-left: 8px;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  margin-left: 8px;
+  margin-top: 8px;
+  margin-bottom: -8px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 50px 88px;
+  align-items: start;
+}
+
+.footer__address {
+}
+
+.footer__menu {
+}
+
+.footer__menu-list {
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  list-style-type: none;
+}
+
+.footer__menu-link {
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  gap: 48px;
+  list-style-type: none;
+}
+
+.footer__social-list-item {
+}
+
+.footer__social-link {
+}
+
+.footer__social-icon {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
