--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ header {
   max-height: 757px;
   margin-bottom: 169px;
   padding: 165px 50px 51px 60px;
-  background-image: url(./images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -182,15 +182,15 @@ header {
 }
 
 .card_type_film {
-  background-image: url(./images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
   background-size: cover;
 }
 .card_type_book {
-  background-image: url(./images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
   background-size: cover;
 }
 .card_type_picture {
-  background-image: url(./images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
   background-size: cover;
 }
 .card__title {
@@ -241,7 +241,6 @@ header {
   height: 240px;
   margin-top: 35px;
   margin-left: -13px;
-
   border-radius: 50%;
   padding: 64px 46px 62px;
   background-color: black;
