--- a/styles/style.css
+++ b/styles/style.css
@@ -2,15 +2,17 @@ header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  padding: 92px 24px 96px;
-  background-color: #f5f5f5;
+  padding: 92px 24px 95px;
 }
 
 .header__links-list {
   display: flex;
   align-items: center;
-  gap: 32px;
+  gap: 33px;
+  padding-top: 1px;
   padding-left: 27px;
+  font-weight: 400;
+  font-size: 18px;
   list-style-type: circle;
 }
 
@@ -19,10 +21,8 @@ header {
 }
 
 .header__link {
-  font-weight: 400;
-  font-size: 18px;
-  letter-spacing: 1%;
-  text-underline-offset: 3px;
+  justify-self: center;
+  text-underline-offset: 4px;
 }
 
 .header__link_active {
@@ -31,8 +31,8 @@ header {
 
 .header__logo {
   display: block;
-  width: 129px;
-  height: 105px;
+  width: 136px;
+  height: 107px;
 }
 
 .address {
@@ -42,7 +42,7 @@ header {
   line-height: 24.3px;
 }
 .address a {
-  text-underline-offset: 3px;
+  text-underline-offset: 4px;
 }
 
 .header__address {
@@ -52,9 +52,8 @@ header {
 
 .cover {
   position: relative;
-  max-height: 757px;
-  margin-bottom: 169px;
-  padding: 165px 50px 51px 60px;
+  margin-bottom: 180px;
+  padding: 165px 50px 51px 50px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -76,7 +75,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-bottom: 135px;
+  padding-bottom: 131px;
   text-transform: uppercase;
 }
 
@@ -115,6 +114,7 @@ header {
 .cover__description {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cover__description-text {
@@ -123,7 +123,7 @@ header {
   color: #fff;
   font-weight: 400;
   font-size: 22px;
-  line-height: 45px;
+  line-height: 41px;
   text-transform: uppercase;
   word-spacing: 19px;
 }
@@ -140,12 +140,11 @@ header {
 }
 
 .lots {
-  margin-bottom: 146px;
-  padding: 0 24px;
+  margin: 0 24px 146px;
 }
 
 .lots__heading {
-  margin-bottom: 27px;
+  margin-bottom: 24px;
   padding-left: 40px;
   font-weight: 700;
   font-size: 40px;
@@ -156,49 +155,50 @@ header {
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
-  margin-bottom: 30px;
-
+  margin-bottom: 33px;
   list-style-type: none;
 }
 
 .card-link {
   display: block;
-
   height: 100%;
   text-decoration: none;
 }
 
 .card {
   position: relative;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 334px;
-  height: 100%;
-
+  height: 563px;
   padding: 51px 40px 48px;
   color: #fff;
+
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
   background-size: cover;
 }
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
   background-size: cover;
 }
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
   background-size: cover;
 }
 .card__title {
   z-index: 2;
   font-weight: 700;
   font-size: 22px;
-  line-height: 120%;
+  line-height: 123%;
   text-decoration: underline;
+  text-underline-offset: 3px;
   text-transform: uppercase;
 }
 
@@ -213,7 +213,7 @@ header {
   padding-left: 40px;
   font-weight: 400;
   font-size: 20px;
-  text-underline-position: under;
+  text-underline-offset: 3px;
 }
 
 .about {
@@ -222,7 +222,7 @@ header {
   grid-template-rows: auto auto;
 
   margin-right: 24px;
-  margin-bottom: 180px;
+  margin-bottom: 189px;
   margin-left: 24px;
 }
 
@@ -250,6 +250,7 @@ header {
   grid-column: 2/3;
   grid-row: 1/2;
   align-items: center;
+  align-self: center;
   margin-top: 45px;
   margin-left: 8px;
   font-weight: 700;
@@ -274,14 +275,21 @@ header {
 }
 
 .footer__menu-list {
+  padding-left: 38px;
   font-weight: 400;
   font-size: 18px;
   text-align: center;
+  text-underline-offset: 3px;
   list-style-type: none;
 }
 
 .footer__menu-link_active {
   text-decoration: none;
+}
+.footer__address {
+  padding-left: 2px;
+  font-weight: 400;
+  text-underline-offset: 3px;
 }
 
 .footer__social-list {
